src/objects/Account_Zendesk__c.object
<CustomObject>
    <fields>
        <fullName>ACE_Architect__c</fullName>
        <label>ACE Architect</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Zendesk</relationshipLabel>
        <relationshipName>Account_Zendesk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OP_CODE__c</fullName>
        <label>OP CODE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Id__c</fullName>
        <label>Organisation Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE__c</fullName>
        <label>SE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAM__c</fullName>
        <label>TAM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Id__c</fullName>
        <label>Trigger Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Account Zendesk</label>
    <nameField>
        <label>Account Zendesk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Zendesk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>